--- a/LibFT/Makefile
+++ b/LibFT/Makefile
@@ -6,17 +6,15 @@
 #    By: hahadiou <hahadiou@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/15 21:16:26 by hahadiou          #+#    #+#              #
-#    Updated: 2023/05/24 16:29:18 by hahadiou         ###   ########.fr        #
+#    Updated: 2023/06/04 15:12:46 by hahadiou         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_isspace.c \
-		ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
-		ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
-		ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c \
-		ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_realloc.c \
-		ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
-		ft_putendl_fd.c ft_putnbr_fd.c ft_litoa.c \
+SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c  ft_isspace.c \
+		ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c  \
+		ft_strlcpy.c ft_strlcat.c ft_strchr.c \
+		ft_strncmp.c ft_strnstr.c ft_litoa.c \
+		ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c \
 		ft_dprintf.c ft_dprintf_utils.c \
 		get_next_line.c get_next_line_utils.c ft_dup_env.c ft_count_strings.c ft_clear_split.c \
 		ft_lstadd_back.c ft_lstclear.c ft_lstdelone.c ft_lstnew.c ft_lstlast.c ft_lexerclear.c ft_extend_env.c \
